# any_invocable

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build_debug.sh  build_release.sh  local_build_and_test.sh  run_tests_debug.sh  run_tests_release.sh
.github/workflows/: bazel_build.yml  linux_builds.yml  macos_builds.yml  macos_windows_builds.yml  windows_builds.yml
bazel_rc/: sanitizers.rc
catch/: CMakeLists.txt
include/: invocable.h  invokable.h
include/ofats/: invocable.h
test/: CMakeLists.txt  invocable_ut.cpp
tests/: CMakeLists.txt  invocable_ut.cpp
